--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
                         <div class="content">
                             <h1 class="heading">Rocket League</h1>
                             <p class="info">
-                                Rocket League is a high-octane blend of soccer and rocket-powered cars, where players compete in fast-paced matches filled with aerial stunts and explosive goals.</p>
+                                Rocket League is a high-octane blend of soccer and rocket-powered cars, where players compete in fast-paced matches.</p>
                         </div>
                     </div>
                 
@@ -111,7 +111,7 @@
                     </div>
                     <div class="content">
                         <h1 class="heading">BGMI</h1>
-                        <p class="info">BGMI (Battlegrounds Mobile India) is a popular battle royale game by Krafton, designed for Indian players. It has a strategic gameplay where 100 players compete to be the last one standing.</p>
+                        <p class="info">BGMI is a popular battle royale, designed for Indian players. It has a strategic gameplay where 100 players compete to be the last one standing.</p>
                     </div>
                 </div>
                 <div class="card" onclick="window.location.href = '../games_parti/?game=MortalKombat';">
@@ -123,22 +123,22 @@
                         <p class="info">Mortal Kombat is a legendary fighting game franchise known for its intense combat, iconic characters, and brutal finishers.</p>
                     </div>
                 </div>
-                <div class="card" onclick="window.location.href = '../games_parti/?game=CSGO';">
+                <div class="card" onclick="alert('No images available as of yet');">
                     <div class="bg">
                         <img src="./about_page/files/CS_GO Wallpaper.jpg" alt="CS:Go" class="card-img">
                     </div>
                     <div class="content">
-                        <h1 class="heading">CS:Go</h1>
-                        <p class="info">Counter-Strike 2 (CS2) is the latest installment in the iconic first-person shooter series, featuring updated graphics, new gameplay mechanics, and enhanced tactical elements</p>
+                        <h1 class="heading">CS 2</h1>
+                        <p class="info">CS2 is the latest installment in the iconic FPS series, featuring better graphics, gameplay mechanics, and enhanced tactical elements</p>
                     </div>
                 </div>
-                <div class="card" onclick="window.location.href = '../games_parti/?game=CR';" >
+                <div class="card" onclick="alert('No images available as of yet');" >
                     <div class="bg">
                         <img src="./about_page/files/cr_home.png" alt="Valorant" class="card-img">
                     </div>
                     <div class="content">
                         <h1 class="heading">Clash Royale</h1>
-                        <p class="info">Clash Royale is a fast-paced, real-time strategy game where players battle opponents in dynamic arenas using a custom deck of cards featuring troops, spells, and buildings</p>
+                        <p class="info">CR is a real-time strategy game where players battle opponents in dynamic arenas using a custom deck of cards featuring troops, spells, and buildings</p>
                     </div>
                 </div>
             </div>
