--- a/public/tournaments/tournaments.html
+++ b/public/tournaments/tournaments.html
@@ -56,7 +56,7 @@
                             <h1>Ava</h1>
                         </div>
                         <div class="content">
-                            <h3>Valorant Tournament</h3>
+                            <h3>Avalanche</h3>
                             <p>Avalanche is an upcoming Valorant tournament scheduled in January, to be held in offline mode at IIT Indore.
                                 Further details will be revealed later.
                             </p>
@@ -112,6 +112,7 @@
                             <h1>Kick</h1>
                         </div>
                         <div class="content">
+                            <h3>Kickoff 3.0</h3>
                             <p> Kickoff is an upcoming FIFA tournament scheduled in January. The vent will be held in offline mode at IIT Indore.
                             Further details will be revealed later. </p>
                             <a href="#" class="btn">Not live</a>
@@ -142,7 +143,7 @@
                     <div class="detail-item">
                         <i class="fas fa-trophy"></i>
                         <h4>Prize Pool</h4>
-                        <p>To be announced</p>
+                        <p>Will be announced</p>
                     </div>
                     <div class="detail-item">
                         <i class="fas fa-gamepad"></i>
@@ -152,7 +153,7 @@
                     <div class="detail-item">
                         <i class="fas fa-map"></i>
                         <h4>Maps</h4>
-                        <p>Current Competitive Maps</p>
+                        <p>All Current Maps</p>
                     </div>
                 </div>
             </div>
