--- a/public/about_page/about.html
+++ b/public/about_page/about.html
@@ -226,7 +226,7 @@
                 </div>
 
                 <div class="namecard hidden">
-                    <img src="./files/ampady - Ampady B (1).jpg" alt="Ampady BR" class="photo">
+                    <img src="./files/ampady - Ampady B1.jpg" alt="Ampady BR" class="photo">
                     <div class="info">
                         <div class="name">Ampady BR</div>
                         <div class="position">Core Team</div>
