--- a/public/about_page/about.html
+++ b/public/about_page/about.html
@@ -18,7 +18,7 @@
         <li><a href="../" >Home</li></a>
         <li><a href="../tournaments" >Tournament</li></a>
         <li><a href="../index.html#gallery-to">Gallery</a></li>
-        <li><a href="../about_page" >About Us</li></a>
+        <li><a href="../about_page" >About</li></a>
     </ul>
 </header>
 <div class="side-navbar">
@@ -38,26 +38,22 @@
         <div class="herocard-container">
             <div class="herocard" style="background-image: url('https://res.cloudinary.com/dq2skbvkx/image/upload/v1734211712/tsviph8atewmzqjyzrvc_issnun.jpg')">
                 <div class="herocard-content">
-                    <h2></h2>
-                    <p></p>
+
                 </div>
             </div>
             <div class="herocard" style="background-image: url('https://res.cloudinary.com/dq2skbvkx/image/upload/v1734211711/IMG20230310130447_amr2yc_gzqaii.jpg')">
                 <div class="herocard-content">
-                    <h2></h2>
-                    <p></p>
+
                 </div>
             </div>
             <div class="herocard" style="background-image: url('https://res.cloudinary.com/dq2skbvkx/image/upload/v1734211710/DSC00376_pnd6zy_jqxozc.jpg')">
                 <div class="herocard-content">
-                    <h2></h2>
-                    <p></p>
+
                 </div>
             </div>
             <div class="herocard" style="background-image: url('https://res.cloudinary.com/dq2skbvkx/image/upload/v1733828273/IMG_2244_nb22nj.jpg')">
                 <div class="herocard-content">
-                    <h2></h2>
-                    <p></p>
+
                 </div>
             </div>
         </div>
