--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming Website IIT Indore</title>
-    <link rel="icon" type="image/jpg" href=".about_page/files/gc_logo2-removebg.png">
+    <link rel="icon" type="image/jpg" href="../about_page/files/gc_logo2-removebg.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
