--- a/public/tournaments/tournaments.html
+++ b/public/tournaments/tournaments.html
@@ -1,14 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tournaments - Gaming Club IITI</title>
-
+    <link rel="icon" type="image/jpg" href="../about_page/files/gc_logo2-removebg.png">
     <!-- AOS CSS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
     <!-- Your stylesheets -->
     <link rel="stylesheet" href="tournament.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,8 +27,8 @@
         <nav class="navbar">
             <a style="color: cyan;" href="../">Home</a>
             <a style="color: cyan;" href="./">Tournament</a>
-            <a style="color: cyan;" href="../about_page">About Us</a>
             <a style="color: cyan;" href="../index.html#gallery-to">Gallery</a>
+            <a style="color: cyan;" href="../about_page">About Us</a>
         </nav>
         <div class="menu-toggle">
             <i class="fas fa-bars"></i>
@@ -124,13 +122,11 @@
                     </div>
                 </div>
             </div>
-
             <div class="navigation">
                 <span class="prev-btn"><i class="fa-solid fa-chevron-left fa-3x"></i></span>
                 <span class="next-btn"><i class="fa-solid fa-chevron-right fa-3x"></i></span>
             </div>
         </section>
-
         <section class="tournament-details"  data-aos="fade-up">
             <div class="container">
                 <h1 class="section-title neon">Avalanche Details*</h1>
@@ -159,7 +155,6 @@
             </div>
         </section>
 
-
         <section class="previous-tournaments"  data-aos="fade-up">
             <div class="container">
                 <h2 class="section-title neon">Previous Tournaments</h2>
@@ -173,7 +168,7 @@
                             </div>
                             <div class="card-back">
                                 <h3>Tekken Tournament</h3>
-                                <p>An intense PVP combat game</p>
+                                <p>An intense Player Vs Player combat game</p>
                                 <a href="https://www.instagram.com/p/DBOOWHgsX1o/" class="learn-more">Learn More</a>
                             </div>
                         </div>
@@ -187,7 +182,7 @@
                             </div>
                             <div class="card-back">
                                 <h3>T VS M</h3>
-                                <p>IIT vs IIM is here! 🏆. Come watch the clash of legends in Tekken, Valorant, and FIFA. Don’t miss out on the action! ⚔️⚡</p>
+                                <p>IIT vs IIM is here! 🏆. Come watch the clash of legends in Tekken, Valorant, and FIFA. Don’t miss out on the action! ⚡</p>
                                 <a href="https://www.instagram.com/p/DBnp6EmTH9C/" class="learn-more">Learn More</a>
                             </div>
                         </div>
