--- a/public/games_parti/game.html
+++ b/public/games_parti/game.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events - Gaming Club IITI</title>
+    <link rel="icon" type="image/jpg" href="../about_page/files/gc_logo2-removebg.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -43,31 +44,26 @@
                 <div class="item" style="background-image: url();">
                     <div class="content">
                         <div class="name"></div>
-                        <div class="des"></div>
                     </div>
                 </div>
                 <div class="item" style="background-image: url();">
                     <div class="content">
                         <div class="name"></div>
-                        <div class="des"></div>
                     </div>
                 </div>
                 <div class="item" style="background-image: url();">
                     <div class="content">
                         <div class="name"></div>
-                        <div class="des"></div>
                     </div>
                 </div>
                 <div class="item" style="background-image: url();">
                     <div class="content">
                         <div class="name"></div>
-                        <div class="des"></div>
                     </div>
                 </div>
                 <div class="item" style="background-image: url();">
                     <div class="content">
                         <div class="name"></div>
-                        <div class="des"></div>
                     </div>
                 </div>
             </div>
@@ -101,7 +97,7 @@
                 <a href="https://www.linkedin.com/company/esports-and-gaming-club-iit-indore/" target="_blank" class="social-link">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="https://www.youtube.com/channel/UCetknQEIUJA26gA2m6Fy-aw"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.youtube.com/channel/UCetknQEIUJA26gA2m6Fy-aw" target="_blank" class="social-link"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
         <div class="footer-bottom">
