--- a/public/tournaments/tournaments.html
+++ b/public/tournaments/tournaments.html
@@ -18,8 +18,9 @@
     <link rel="stylesheet" href="hero.css">
 
     <!-- Preloader -->
-    <div id="preloader" class="preloader">
-        <div class="loader"></div></div>
+    <div class="preloader">
+        <img src="../about_page/files/Loop-the-loop-bike-loader-in-CSS.gif" alt="Loading..." class="loading-gif">
+</div>
 </head>
 <body>
     <header>
