--- a/public/about_page/about.html
+++ b/public/about_page/about.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="ABJ_ABOUT_STYLE.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <div id="preloader" class="preloader">
-        <div class="loader"></div></div>
+    <div class="preloader">
+        <img src="../about_page/files/Loop-the-loop-bike-loader-in-CSS.gif" alt="Loading..." class="loading-gif">
+    </div>
 </head>
 <header>
     <div class="name"> <a href="../" class="logo"><img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1730036989/gc_logo2-removebg_uqbf76.png"> Gaming Club IITI</a></div>
@@ -371,16 +372,24 @@ document.addEventListener("DOMContentLoaded", () => {
     `;
     document.head.appendChild(style);
 });
-document.addEventListener("DOMContentLoaded", function() {
-    // Hide the preloader
-    function hidePreloader() {
-        const preloader = document.getElementById("preloader");
-        preloader.style.display = "none";
-    }
-    // Add a slight delay to simulate loading time if needed
-    setTimeout(hidePreloader, 1000); // 2000ms = 2 seconds
-});
 
+document.addEventListener('DOMContentLoaded', function() {
+    const preloader = document.querySelector('.preloader');
+    const minimumLoadingTime = 3700; // 2 seconds minimum display time
+    const startTime = Date.now();
+
+    window.addEventListener('load', function() {
+        const elapsedTime = Date.now() - startTime;
+        const remainingTime = Math.max(minimumLoadingTime - elapsedTime, 0);
+
+        setTimeout(() => {
+            preloader.classList.add('fade-out');
+            setTimeout(() => {
+                preloader.style.display = 'none';
+            }, 500); // Wait for fade animation to complete
+        }, remainingTime);
+    });
+});
         const header = document.querySelector('header');
         document.addEventListener('DOMContentLoaded', () => {
         const header = document.querySelector('header');
