--- a/public/games_parti/game.html
+++ b/public/games_parti/game.html
@@ -11,8 +11,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="game.css">
     <script src="game.js"></script>
-    <div id="preloader" class="preloader">
-        <div class="loader"></div></div>
+    <div class="preloader">
+        <img src="../about_page/files/Loop-the-loop-bike-loader-in-CSS.gif" alt="Loading..." class="loading-gif">
+</div>
 </head>
 
 <body>
