--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IR00HhonpyAIVpjry]PvoDwiPUiKdWk5t3Pyo]Y1c0d4DSE®Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <div class="preloader">
-        <img src="../about_page/files/Loop-the-loop-bike-loader-in-CSS.gif" alt="Loading..." class="loading-gif">
+        <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1734786982/fgugqmcmwa12kq6lk3iq.gif" alt="Loading..." class="loading-gif">
     </div>
 </head>
 
