--- a/public/games_parti/game.html
+++ b/public/games_parti/game.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="game.css">
     <script src="game.js"></script>
     <div class="preloader">
-        <img src="../about_page/files/Loop-the-loop-bike-loader-in-CSS.gif" alt="Loading..." class="loading-gif">
+        <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1734786982/fgugqmcmwa12kq6lk3iq.gif" alt="Loading..." class="loading-gif">
 </div>
 </head>
 
