--- a/public/tournaments/tournaments.html
+++ b/public/tournaments/tournaments.html
@@ -46,7 +46,7 @@
                     <img src="https://wallpaperaccess.com/full/9319236.png" alt="Event Poster" fetchpriority="high">
                     <div class="left-info">
                         <div class="penetrte-blur">
-                            <h1>Ava</h1>
+                            <h1>Aval</h1>
                         </div>
                         <div class="content">
                             <h3>Avalanche</h3>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div class="right-info">
-                        <h1>lanche</h1>
+                        <h1>anche</h1>
                     </div>
                 </div>
                 <div class="slide">
